# ros2_ws_backup

./: .gitignore  test_i2c.py
path_logs/: gps_path_20250313_182052.json  gps_path_20250313_182302.json  gps_path_20250313_183300.json  gps_path_20250313_184452.json  gps_path_20250313_185709.json  gps_path_20250313_190154.json  gps_path_20250313_191101.json  path_log_20250313_173309.csv
src/azure_bridge/: package.xml  setup.cfg  setup.py
src/azure_bridge/azure_bridge/: azure_node.py
src/azure_sender/: package.xml  setup.cfg  setup.py
src/azure_sender/azure_sender/: azure_node.py
src/forklift_description/: CMakeLists.txt  package.xml
src/forklift_description/launch/: display.launch.py  interactive.launch.py
src/forklift_description/scripts/: find_center.py  find_model_center.py
src/forklift_description/urdf/: forklift_description.urdf
src/fusion_localization/: package.xml  setup.cfg  setup.py
src/fusion_localization/config/: ekf_config.yaml
src/fusion_localization/fusion_localization/: foxglove_map_publisher_node.py  foxglove_path_publisher_node.py  geojson_publisher_node.py  gps_diagnostic_node.py  gps_simulator_node.py  gps_to_odom_node.py  gps_to_odom_node.py.save  gps_visualizer_node.py
src/fusion_localization/launch/: diagnostic_launch.py  direct_launch.launch.py  foxglove_path_launch.py  localization.launch.py  outdoor_localization.launch.py  sim_localization.launch.py
src/fusion_localization/rviz/: localization.rviz
src/fusion_localization/scripts/: path_marker_publisher.py  path_visualizer.py  simple_gps_to_odom.py  visualize_path.py
src/gps_reader/: package.xml  setup.py
src/gps_reader/certs/: device-88653537-0ec2-4a17-ab28-c4ecde3345e2-pp-cert.crt  device-88653537-0ec2-4a17-ab28-c4ecde3345e2-pp-key.pem
src/gps_reader/gps_reader/: gps_node.py
src/imu_driver/: package.xml  setup.py
src/imu_driver/imu_driver/: calibration_monitor.py  imu_calibration.launch.py  imu_node.py
src/imu_driver/launch/: imu_calibration.launch.py  imu_with_foxglove.launch.py  minimal_test.launch.py
src/imu_test/: package.xml  setup.py
src/imu_test/imu_test/: imu_viz_node.py  simple_imu_node.py
src/lidar_trigger/: package.xml  setup.cfg  setup.py
src/lidar_trigger/lidar_trigger/: lidar_trigger_node.py
src/pallet_nodes/: package.xml  setup.cfg  setup.py
src/pallet_nodes/pallet_nodes/: pallet_fusion_node.py  trigger_node.py
src/rfid_reader/: CMakeLists.txt  package.xml
src/rfid_reader/include/rfid_reader/: Protocol_Light.h
src/rfid_reader/src/: rfid_node.c
src/rfid_ros2/: CMakeLists.txt  package.xml
src/rfid_ros2/include/rfid_ros2/: CAENRFIDLib_Light.h  CAENRFIDTypes_Light.h  IO_Light.h  Protocol_Light.h  host.h
src/rfid_ros2/sdk/: CAENRFIDLib_Light.h  CAENRFIDTypes_Light.h  IO_Light.h  host.h
src/rfid_ros2/src/: CAENRFIDLib_Light.c  IO_Light.c  host.c  rfid_node.cpp
src/rfid_trigger/: CMakeLists.txt  package.xml
src/rfid_trigger/src/: trigger_node.cpp
src/system_launch/: package.xml  setup.py
src/system_launch/launch/: all_nodes.launch.py
src/trigger/: CMakeLists.txt  package.xml
src/trigger/src/: trigger_node.cpp
