<?xml version="1.0"?>
<package format="3">
  <name>rfid_ros2</name>
  <version>0.0.0</version>
  <description>RFID node using CAEN RFID SDK</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
